fix nav-mobile overlapping

--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -62,6 +62,7 @@ h6{
 		background-color: #222222;
 		z-index: 2;
 		opacity: 0;
+		display: none;
 		
 		position: absolute;
 		
@@ -78,6 +79,7 @@ h6{
 		&.active{
 			left: 0px;
 			opacity: 1;
+			display: block;
 			
 			@include transition-delay(0s);
 			
